adding Spock maven config and spock test